# intel-4004-verified

./: _CoqProject  coq-intel4004.opam
.github/workflows/: docker-action.yml
theories/: hoare.v  isa.v  machine.v  semantics.v  timing.v  utils.v
